--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+
+
+
 @font-face{
     font-family:Wiz-W;
     src: url(wizard-world-simplified.ttf);
@@ -281,3 +285,311 @@ main {
 .about-info p>bold{
     font-weight: 600;
 }
+
+
+        /* cards */
+
+
+#landing {
+    padding: 70px 0;
+    max-width: 1200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 80px;
+}
+
+#landing h2 {
+    font-size: 30px;
+    font-weight: 800;
+}
+
+.landing-cards-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
+.landing-card {
+    width: 300px;
+    height: 290px;
+    padding: 40px 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    background: var(--hpv5);
+    border-radius: 10px;
+    gap: 20px
+}
+
+.landing-card img{
+    width: 15%;
+}
+
+.landing-card h3 {
+    font-weight: 600;
+    font-size: 18px;
+}
+
+.landing-card p{
+    font-size: 14px;
+    font-weight: 300;
+    color: var(--text-gray);
+}
+
+
+
+
+
+/* contact */
+
+#contact{
+    display: flex;
+    padding: 25%;
+    align-items: center;
+    justify-content: center;
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+
+.contact-container{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding-right: 150px;
+    gap:10px;
+    color: var(--text-gray);
+}
+
+.contact p{
+    padding: 5px;
+}
+
+.contact-container h2{
+    padding-bottom: 30px;
+    font-size: 35px;
+    color: var(--bg-white);
+}
+
+.contact{
+    width: 200px;
+}
+/* imágenes */
+
+.images{
+    display: flex;
+    width: 500px;
+    height: 430px;
+
+}
+
+.images img{
+    width: 0;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
+
+}
+
+.images img:hover {
+    cursor: crosshair;
+    width: 300px;
+    opacity: 1;
+    filter: contrast(120%);
+}
+
+
+
+
+
+
+
+
+
+
+
+
+/* #contact{
+    display: flex;
+    gap: 20px;
+    margin: 30px;
+    align-items: center;
+}
+
+.contact-container{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.contact{
+    display: flex;
+    align-items: left;
+}
+.contact-container h2{
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+        /* images */
+
+        /* .images {
+            display: flex;
+            width: 600px;
+            height: 430px;
+        
+        }
+        
+        .images img{
+            width: 0;
+            flex-grow: 1;
+            object-fit: cover;
+            opacity: .8;
+            transition: .5s ease;
+        
+        }
+        
+        .images img:hover {
+            cursor: crosshair;
+            width: 300px;
+            opacity: 1;
+            filter: contrast(120%);
+        } */
+
+
+/* imágenes */
+
+/* .images{
+    display: flex;
+    width: 600px;
+    height: 300px;
+    
+}
+
+.images img{
+    width: 0;
+    flex-grow: 1;
+    object-fit: cover;
+    opacity: .8;
+    transition: .5s ease;
+
+}
+
+.images img:hover {
+    cursor: crosshair;
+    width: 40%;
+    opacity: 1;
+    filter: contrast(120%);
+} */ */
+
+
+
+footer {
+    background-color: var(--background);
+}
+
+
+/* icons */
+
+#icons{
+    font-family: 'Poppins', sans-serif;
+	background-color: var(--background);
+	display: grid;
+	place-items: center;
+	height: 5%;
+    box-sizing: border-box;
+    padding: 10%;
+}
+
+.logos-redes{
+    width: 10%;
+    display: flex;
+    justify-content: center;
+    padding: 5%;
+    gap:10px
+}
+
+.icons {
+    display: flex;
+	column-gap: 25px;
+}
+.icon {
+	display: inline-flex;
+	width: 40px;
+	height:40px;
+	text-decoration: none;
+	font-size: 26px;
+	color: #fff;
+	border-radius: 50%;
+	outline: 2px solid #fff;
+	transition-property: outline-offset, outline-color, background-color;
+	transition-duration: 0.25s;
+}
+
+.icon img{
+    padding:20%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.icon:hover {
+	outline-offset: 4px;
+}
+.icon i {
+	margin: auto;
+}
+.icon:hover i {
+	animation: shake 0.25s;
+}
+.icon--instagram:hover {
+	background-image: radial-gradient(
+		circle at 30% 107%,
+		#fdf497 0%,
+		#fdf497 5%,
+		#fd5949 45%,
+		#d6249f 60%,
+		#285aeb 90%
+	);
+	outline-color: #a02d76;
+}
+.icon--twitter:hover {
+	background-color: #1da1f2;
+	outline-color: #1da1f2;
+}
+.icon--facebook:hover {
+	background-color: #0077b5;
+	outline-color: #0077b5;
+}
+.icon--ws:hover {
+	background-color: #2ea44f;
+	outline-color: #2ea44f;
+}
+
+.icon--youtube:hover {
+	background-color: #f21d36;
+	outline-color: #f21d36;
+}
+
+@keyframes shake {
+	10% {
+		transform: rotate(15deg);
+	}
+	20% {
+		transform: rotate(-15deg);
+	}
+	30% {
+		transform: rotate(15deg);
+	}
+	40% {
+		transform: rotate(-15deg);
+	}
+}
+
